--- a/index.html
+++ b/index.html
@@ -2959,7 +2959,7 @@
                             <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#value">
                                 <code class="example_code">value</code>
                             </a> attribute contains a string that is used as the button's label.
-                            <img class="img-element" src="./Images/input Button with value example.png" alt="input Button with value example">
+                            <img class="img-element" src="./Images/input Button with Value example.png" alt="input Button with value example">
 
                             <div class="div-with-results">
                                 <p class="code-heading">OUTPUT</p>
@@ -2973,7 +2973,7 @@
                         <p class="section-text">
                             <b>Button without a value</b><br><br>
                             If you don't specify a <code class="example_code">value</code>, you get an empty button:
-                            <img class="img-element" src="./Images/input Button without value example.png" alt="input Button without value example">
+                            <img class="img-element" src="./Images/input Button without Value example.png" alt="input Button without value example">
 
                             <div class="div-with-results">
                                 <p class="code-heading">OUTPUT</p>
